syntax = "proto3";

option java_package = "es.uniovi.miw.miwtter";

package miwtter;

///////////////////////////////////////////////////////
// USERS SERVICE
///////////////////////////////////////////////////////

/**
 * The user service manages the registration and the login of the users.
 */
service UsersService {
    rpc Register(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc Login(LoginUserRequest) returns (LoginUserResponse) {}
    rpc Find(FindUserRequest) returns (FindUserResponse) {}
}

message RegisterUserRequest {
    string name             = 1;
    string surname          = 2;
    string username         = 3;
    string password         = 4;
}

message RegisterUserResponse {
    enum ResponseStatus {
        USER_CREATED                = 0;
        USERNAME_ALREADY_EXISTS     = 1;
    }
    ResponseStatus responseStatus   = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    enum ResponseStatus {
        SUCCESS                         = 0;
        INCORRECT_USERNAME_OR_PASSWORD  = 1;
    }
    ResponseStatus responseStatus   = 1;
}

message FindUserRequest {
    string name             = 1;
    string surname          = 2;
    string username         = 3;
    enum FindPolicy {
        AND = 0;
        OR  = 1;
    }
    FindPolicy findPolicy   = 4;
}

message FindUserResponse {
    repeated FullUserData user = 1;
}

message FullUserData {
    string name                     = 1;
    string surname                  = 2;
    string username                 = 3;
    int32 numberOfPosts             = 4;
    repeated UserPost userPosts     = 5;
    int32 numberOfLikes             = 6;
    repeated FeedPost likedPosts    = 7;
}

message UserPost {
    string postId               = 1;
    string ownerUsername        = 2;
    string postContent          = 3;
    string numberOfLikes        = 4;
}

///////////////////////////////////////////////////////
// POSTS SERVICE
///////////////////////////////////////////////////////

/**
 * The posts service has the responsibility of creating posts and managing the
 * like and unlike actions.
 */
service PostsService {
    rpc Create(CreatePostRequest) returns (CreatePostResponse) {}
    rpc Like(LikePostRequest) returns (LikePostResponse) {}
    rpc RemoveLike(RemoveLikeRequest) returns (RemoveLikeResponse) {}
}

message CreatePostRequest {
    string actorUsername = 1;
    string content  = 2;
}

message CreatePostResponse {
    enum ResponseStatus {
        POST_CREATED    = 0;
        USER_NOT_FOUND  = 1;
    }
    ResponseStatus responseStatus   = 1;
}

message LikePostRequest {
    string actorUsername = 1;
    string postId   = 2;
}

message LikePostResponse {
    enum ResponseStatus {
        LIKE_CREATED    = 0;
        USER_NOT_FOUND  = 1;
        POST_NOT_FOUND  = 2;
    }
    ResponseStatus responseStatus   = 1;
}

message RemoveLikeRequest {
    string actorUsername = 1;
    string postId   = 2;
}

message RemoveLikeResponse {
    enum ResponseStatus {
        LIKE_REMOVED        = 0;
        USER_NOT_FOUND      = 1;
        POST_NOT_FOUND      = 2;
        LIKE_DID_NOT_EXISTS = 3;
    }
    ResponseStatus responseStatus   = 1;
}

///////////////////////////////////////////////////////
// FEED SERVICE
///////////////////////////////////////////////////////

/**
 * The feed service gets the feed. At the moment it will get all the posts of the system
 * but it whould be customized for each user. That's the reason why it should be on a separate
 * service.
 */
service FeedService {
    rpc Get(GetFeedRequest) returns (GetFeedResponse) {}
}

message GetFeedRequest {
    string actorUsername = 1;
}

message GetFeedResponse {
    enum ResponseStatus {
        FEED_FOUND    = 0;
        USER_NOT_FOUND  = 1;
    }
    ResponseStatus responseStatus   = 1;
    repeated FeedPost posts = 2;
}

message FeedPost {
    string postId = 1;
    string ownerUsername = 2;
    string content = 3;
    int32 numberOfLikes = 4;
}